// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-component component-parameters.mdx 1`] = `
Object {
  "components": Object {
    "/Users/atanasster/component-controls/core/instrument/test/fixtures/mdx/component/component-parameters.mdx": Object {
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "loc": Object {
        "end": Object {
          "column": 72,
          "line": 3,
        },
        "start": Object {
          "column": 31,
          "line": 3,
        },
      },
      "name": "Button",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-arrow-func.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
      "source": "import React from 'react';

export const Button = props => <button>{\`Hello, \${props.name}\`}</button>;
",
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "attributes": Object {
        "component": "Button",
        "title": "Storybook/MDX",
      },
      "component": "Button",
      "components": Object {
        "Button": "/Users/atanasster/component-controls/core/instrument/test/fixtures/mdx/component/component-parameters.mdx",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/component/component-parameters.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "import { Meta } from '@storybook/addon-docs/blocks';
import { Button } from '../../components/button-named-arrow-func';

<Meta title=\\"Storybook/MDX\\" component={Button} />
",
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {},
}
`;

exports[`mdx-component named-alias-import.mdx 1`] = `
Object {
  "components": Object {
    "/Users/atanasster/component-controls/core/instrument/test/fixtures/mdx/component/named-alias-import.mdx": Object {
      "from": "../../components/button-named-class",
      "importedName": "Btn",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "attributes": Object {
        "component": "Button",
        "title": "Storybook/MDX",
      },
      "component": "Button",
      "components": Object {
        "Button": "/Users/atanasster/component-controls/core/instrument/test/fixtures/mdx/component/named-alias-import.mdx",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/component/named-alias-import.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "import { Meta } from '@storybook/addon-docs/blocks';
import { Btn as Button } from '../../components/button-named-class';
<Meta title=\\"Storybook/MDX\\" component={Button} />",
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {},
}
`;

exports[`mdx-component story-import.mdx 1`] = `
Object {
  "components": Object {
    "/Users/atanasster/component-controls/core/instrument/test/fixtures/mdx/component/story-import.mdx": Object {
      "from": "./Button",
      "importedName": "Btn",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "attributes": Object {
        "component": "Button",
        "title": "Storybook/MDX",
      },
      "component": "Button",
      "components": Object {
        "Button": "/Users/atanasster/component-controls/core/instrument/test/fixtures/mdx/component/story-import.mdx",
        "Toggle": "/Users/atanasster/component-controls/core/instrument/test/fixtures/mdx/component/story-import.mdx",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/component/story-import.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "import { Meta, Story } from '@storybook/addon-docs/blocks';
import { Btn as Button } from './Button';
import { Toggle } from './Toggle';

<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"my-story\\" component={Toggle} />",
      "stories": Array [
        "storybook-mdx--my-story",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--my-story": Object {
      "attributes": Object {
        "component": "Toggle",
        "name": "my-story",
      },
      "component": "Toggle",
      "id": "storybook-mdx--my-story",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 50,
          "line": 23,
        },
        "start": Object {
          "column": 6,
          "line": 23,
        },
      },
      "name": "my-story",
      "source": "<Story name=\\"my-story\\" component={Toggle} />",
    },
  },
}
`;
